# auto-commiter

./: .gitignore  LICENSE  README.md  cache.py  cli.py  config.py  core.py  git_utils.py  install.sh  logging_config.py  main.py  pyproject.toml  settings.py
models/: __init__.py  base.py  hf_local.py  openai_chat.py  rule_based.py
strategies/: __init__.py  selector.py
tests/: test_cli.py  test_git_utils.py  test_models.py
